<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- button to add width to wc_pile-->
    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="124dp"
        android:text="@string/addpile" />

    <!-- woodcademy logo, brings user to woodcademy.com-->
    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/wc_image"
        app:srcCompat="@drawable/woodcademy85ppi" />

    <!--text to view current thickness of the board-->
    <TextView
        android:id="@+id/thick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="120dp"
        android:gravity="right"
        android:text="@string/thick"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:fontFamily="@font/archivo_black" />

    <!-- text to view current length of the board-->
    <TextView
        android:id="@+id/length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/thick"
        android:layout_marginEnd="120dp"
        android:gravity="right"
        android:text="@string/length"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:fontFamily="@font/archivo_black" />

    <!--text to prompt user to enter width-->
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/thick"
        android:layout_alignParentTop="true"
        android:layout_marginTop="233dp"
        android:text="@string/width"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp" />

    <!--user number input for desired width-->
    <EditText
        android:id="@+id/editText"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView4"
        android:layout_marginEnd="116dp"
        android:ems="10"
        android:inputType="number" />

    <!-- button to take user to wc_pile-->
    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp"
        android:text="@string/gotopile" />

    <!-- user entered length from previous screen-->
    <TextView
        android:id="@+id/userlength"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/thick"
        android:layout_marginLeft="-120dp"
        android:layout_marginStart="-120dp"
        android:layout_toEndOf="@+id/length"
        android:layout_toRightOf="@id/length"
        android:text="#"
        android:textSize="24sp" />

    <!-- user entered thickness from previous screen-->
    <TextView
        android:id="@+id/userthick"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/thick"
        android:layout_toEndOf="@+id/thick"
        android:layout_toRightOf="@id/thick"
        android:text="#"
        android:textSize="24sp" />

    <!--width instructions line 1-->
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/widthinstr"
        android:textSize="18sp" />

    <!-- width instructions line 2-->
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="261dp"
        android:text="@string/tapadd"
        android:textSize="18sp" />

    <!-- width instructions line 3-->
    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="221dp"
        android:text="@string/thencont"
        android:textSize="18sp" />
</RelativeLayout>