<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- woodcademy logo, directs user to woodcademy.com on click-->
    <ImageButton
        android:id="@+id/wclogo"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/wc_image"
        app:srcCompat="@drawable/woodcademyfull" />

    <!--titles the page-->
    <TextView
        android:id="@+id/pile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="83dp"
        android:text="@string/pile"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />

    <!-- recyclerview will display widths entered by user alongside cubic inches-->
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="384dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/pile" />

    <!-- sends user to wc_price_per_ft-->
    <Button
        android:id="@+id/calcbutton2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:text="@string/calcPrice" />

    <!--sends user to wc_add_width-->
    <Button
        android:id="@+id/goback"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/calcbutton2"
        android:layout_centerHorizontal="true"
        android:text="@string/goback" />

</RelativeLayout>